--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ pandas==2.0.3
 numpy==1.24.3
 PyMySQL==1.1.0
 mysql-connector-python==8.2.0
+scikit-learn==1.3.0
+xgboost==1.7.6
+catboost==1.2.2
+joblib==1.3.1
+matplotlib==3.7.2
+seaborn==0.12.2
