pembaruan halaman dashboard admin dan dependesi pendukung

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ FLASK_DEBUG=True
 # Database Configuration
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=Arya151203F.
 MYSQL_DB=db_kp
-MYSQL_PORT=3306
+MYSQL_PORT=3307
 
 # Development Settings
 FLASK_ENV=development
