--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-Flask-WTF==1.1.1
-WTForms==3.1.2
-python-dotenv==1.0.1
-pandas==2.0.3
-numpy==1.24.3
-PyMySQL==1.1.0
-mysql-connector-python==8.2.0
+Flask
+Werkzeug
+Flask-WTF
+WTForms
+python-dotenv
+pandas
+numpy
+PyMySQL
+mysql-connector-python
